footer animations terminées

--- a/index.html
+++ b/index.html
@@ -98,10 +98,8 @@
                 <input type="text" name="name" id="name" placeholder="Nom" required />
                 <input type="tel" id="phone" name="phone" placeholder="Numéro de téléphone" required>
                 <input type="email" name="email" id="email" placeholder="Numéro tel." required />
-                <textarea id="message" name="message" rows="5" cols="33">
-                    Votre message...
-                    </textarea>
-                <input type="submit" value="Envoyer" />
+                <textarea id="message" name="message" rows="5" cols="33" placeholder="Votre message"></textarea>
+                <input class="submit" type="submit" value="Envoyer" />
             </form>
             <div class="infos">
                 <h2 class="infos-h2">Nos coordonnées</h2>
