--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
                 <h1>NovaRise</h1>
             </span>
             <span class="topbar-links">
-                <a class="topbar-link" href="">Accueil</a>
-                <a class="topbar-link" href="">A propos</a>
-                <a class="topbar-link" href="">Services</a>
-                <a class="topbar-link" href="">Blog</a>
-                <a class="topbar-link" href="">Evènements</a>
-                <a class="topbar-link" href="">Nous contacter</a>
+                <a class="topbar-link" href="#accueil">Accueil</a>
+                <a class="topbar-link" href="#apropos">A propos</a>
+                <a class="topbar-link" href="#services">Services</a>
+                <a class="topbar-link" href="#blog">Blog</a>
+                <a class="topbar-link" href="#contact">Nous contacter</a>
             </span>
         </topbar>
-        <div class="banner">
+        <div id="accueil" class="banner">
             <img src="img/banner.jpg" alt="Bannière - grattes-ciels">
             <div class="banner-background"></div>
             <div class="banner-text">
@@ -34,7 +33,7 @@
             </div>
         </div>
     </header>
-    <section class="about">
+    <section id="apropos" class="about">
         <span class="about-section">
             <h1 class="about-h1">A propos de nous</h1>
             <img class="about-img" src="./img/about.webp" alt="About">
@@ -43,7 +42,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi non maiores quia rerum. Reprehenderit ex est eos magni ea? Est alias laborum, a veritatis nostrum aliquam porro nisi praesentium nemo?</p>
         </span>
     </section>
-    <section class="services">
+    <section id="services" class="services">
         <h1 class="services-h1">Nos services</h1>
         <div class="cards-container">
             <div class="card">
@@ -78,7 +77,7 @@
             </div>
         </div>
     </section>
-    <section class="videos">
+    <section id="blog" class="videos">
         <h1 class="videos-h1">Nos vidéos</h1>
         <p class="videos-text">Découvrez nos services conçus pour transformer vos idées en succès. Que vous soyez un entrepreneur ambitieux ou une entreprise établie, nous sommes là pour vous accompagner à chaque étape</p>
         <div class="video-container">
@@ -90,7 +89,7 @@
         <h1 class="clients-h1">Nos avis clients</h1>
         <p class="clients-text">Aucun avis client publié pour l'instant.</p>
     </section>
-    <footer class="footer">
+    <footer id="contact" class="footer">
         <h1 class="footer-h1">Nous contacter</h1>
         <p class="footer-p">N'hésitez pas à nous contacter afin de pouvoir échanger</p>
         <div class="form-container">
